<resources>
    <string name="app_name">Pendulum Simulator</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="timestamp">TimeStamp</string>
    <string name="single">Single</string>
    <string name="single_pendulum">Single Pendulum</string>
    <string name="double_pendulum">Double Pendulum</string>
    <string name="last_played">Last played:</string>
    <string name="dash">-</string>
    <string name="testemail">testemail@gmailcom</string>
    <string name="test_name">John Smith</string>
    <string name="g">g =</string>
    <string name="a">a =</string>
    <string name="a1">a1 =</string>
    <string name="a2">a2 =</string>
    <string name="r">r =</string>
    <string name="r1">r1 =</string>
    <string name="r2">r2 =</string>
    <string name="m1">m1 =</string>
    <string name="m2">m2 =</string>
    <string name="trace_1">Trace 1</string>
    <string name="trace_2">Trace 2</string>
    <string name="damping">Damping</string>
    <string name="infinite">Infinite</string>
    <string name="trajectory">Trajectory</string>
    <string name="ball_color">Ball color</string>
    <string name="ball_1_color">Ball 1 color</string>
    <string name="ball_2_color">Ball 2 color</string>
    <string name="trace_color">Trace color</string>
    <string name="trace_1_color">Trace 1 color</string>
    <string name="trace_2_color">Trace 2 color</string>
    <string name="what_is_this">A pendulum is a weight suspended from a pivot so that it can swing freely.[1] When a pendulum is displaced sideways from its resting, equilibrium position, it is subject to a restoring force due to gravity that will accelerate it back toward the equilibrium position. When released, the restoring force acting on the pendulum\'s mass causes it to oscillate about the equilibrium position, swinging back and forth. The time for one complete cycle, a left swing and a right swing, is called the period. The period depends on the length of the pendulum and also to a slight degree on the amplitude, the width of the pendulum\'s swing.</string>
    <string name="wit_title">What is this?</string>
    <string name="github">Github code</string>
    <string name="author">Created by: Zoltan Vegh</string>
    <string name="name">Pendulum Simulator</string>
    <string name="linkedin">My LinkedId page</string>
    <string name="_30">30</string>
    <string name="main">Main</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
</resources>
