<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/a1t"
                android:layout_width="35dp"
                android:layout_height="46dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/a"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <SeekBar
                android:id="@+id/aSeekBar"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:max="360"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/aNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/aSeekBar"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="35dp"
                android:layout_height="46dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/r"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <SeekBar
                android:id="@+id/rSeekBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:max="1000"
                android:min="50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rSeekBar"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="35dp"
                android:layout_height="46dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/g"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <SeekBar
                android:id="@+id/gSeekBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:max="3300"
                android:min="150"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gSeekBar"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="105dp"
                android:layout_height="46dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/damping"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <SeekBar
                android:id="@+id/dampSeekBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:max="11000"
                android:min="9000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dampNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dampSeekBar"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="115dp"
                android:layout_height="46dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/trajectory"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <SeekBar
                android:id="@+id/traceSeekBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:max="101"
                android:min="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/traceNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/traceSeekBar"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="105dp"
                android:layout_height="46dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/ball_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/ballColorButton"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/trace_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/traceColorButton"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.545" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>